[package]
name = "ran-auth"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
rust-ini = { version = "0.19.0", features = ["case-insensitive", "inline-comment"] }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.6.3", features = ["mssql", "chrono", "runtime-async-std-native-tls", "uuid"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
dotenv = "*"